[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/GameEnded/EndGameScreen.gd" type="Script" id=1]
[ext_resource path="res://HUD/theme/default_theme.theme" type="Theme" id=2]

[node name="CenterContainer" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = 8.0
margin_right = 42.0
margin_bottom = 8.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 509.0
margin_top = 368.0
margin_right = 691.0
margin_bottom = 431.0
columns = 2

[node name="Score" type="Label" parent="GridContainer"]
margin_right = 83.0
margin_bottom = 21.0
theme = ExtResource( 2 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="GridContainer"]
margin_left = 87.0
margin_right = 182.0
margin_bottom = 21.0
theme = ExtResource( 2 )
text = "                   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLable" type="Label" parent="GridContainer"]
margin_top = 25.0
margin_right = 83.0
margin_bottom = 39.0
text = "Credits"

[node name="MoneyValue" type="Label" parent="GridContainer"]
margin_left = 87.0
margin_top = 25.0
margin_right = 182.0
margin_bottom = 39.0
text = "000"

[node name="MainMenu" type="Button" parent="GridContainer"]
margin_top = 43.0
margin_right = 83.0
margin_bottom = 63.0
text = "Main Menu"

[node name="Load" type="Button" parent="GridContainer"]
margin_left = 87.0
margin_top = 43.0
margin_right = 182.0
margin_bottom = 63.0
text = "Load"

[connection signal="pressed" from="GridContainer/MainMenu" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GridContainer/Load" to="." method="_on_Load_pressed"]
